{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 1382,
  "lineage": "d82a3085-d6b7-8071-8d5d-5d042a779027",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "drnat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8df195de146820c",
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:elastic-ip/eipalloc-0b8df195de146820c",
            "domain": "vpc",
            "id": "eipalloc-0b8df195de146820c",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-103-92.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.103.92",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "drnat_eip"
            },
            "tags_all": {
              "Name": "drnat_eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "drEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac0e4288aa341886",
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:instance/i-0b3bb65bff6e05d9b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dr-ec2-ssm-profile",
            "id": "i-0b3bb65bff6e05d9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "drkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f24f8160e958adab"
              }
            ],
            "primary_network_interface_id": "eni-0f24f8160e958adab",
            "private_dns": "ip-10-0-2-214.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.214",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05074e12ad478beef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c81688ebc5bcf3fa",
            "tags": {
              "Name": "drEC2"
            },
            "tags_all": {
              "Name": "drEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-03ba6c684622a4bcc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "i-0b3bb65bff6e05d9b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.dr_ec2_ssm_profile",
            "aws_iam_role.dr_ec2_ssm_role",
            "aws_key_pair.drkeypair",
            "aws_security_group.drSG",
            "aws_subnet.drprivSN",
            "aws_vpc.dr",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "drigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:internet-gateway/igw-01cdeb7064aaeb66c",
            "id": "igw-01cdeb7064aaeb66c",
            "owner_id": "536548358674",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "drigw"
            },
            "tags_all": {
              "Name": "drigw"
            },
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dr_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:loadbalancer/app/dr-alb/3d614c430129e700",
            "arn_suffix": "app/dr-alb/3d614c430129e700",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dr-alb-1483343463.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:loadbalancer/app/dr-alb/3d614c430129e700",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dr-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-090a88a8148b7aaa5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06f64e4c8645de92d"
              },
              {
                "subnet_id": "subnet-0c876ac425185de49"
              }
            ],
            "subnets": [
              "subnet-06f64e4c8645de92d",
              "subnet-0c876ac425185de49"
            ],
            "tags": {
              "Name": "dr-alb"
            },
            "tags_all": {
              "Name": "dr-alb"
            },
            "vpc_id": "vpc-0c4954fe6abb65701",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:loadbalancer/app/dr-alb/3d614c430129e700"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.drpubSN",
            "aws_subnet.drpubSN2",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dr_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:listener/app/dr-alb/3d614c430129e700/901e1204cb3da301",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:listener/app/dr-alb/3d614c430129e700/901e1204cb3da301",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:loadbalancer/app/dr-alb/3d614c430129e700",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:listener/app/dr-alb/3d614c430129e700/901e1204cb3da301"
          },
          "dependencies": [
            "aws_lb.dr_alb",
            "aws_lb_target_group.dr_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.drpubSN",
            "aws_subnet.drpubSN2",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dr_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907",
            "arn_suffix": "targetgroup/dr-tg/ed2829ea34e2e907",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dr-tg",
            "port": 30130,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dr-tg"
            },
            "tags_all": {
              "Name": "dr-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dr_ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907-20260220034911847900000004",
            "port": 30130,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536548358674:targetgroup/dr-tg/ed2829ea34e2e907",
            "target_id": "i-0b3bb65bff6e05d9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dr_ec2_ssm_profile",
            "aws_iam_role.dr_ec2_ssm_role",
            "aws_instance.drEC2",
            "aws_key_pair.drkeypair",
            "aws_lb_target_group.dr_tg",
            "aws_security_group.drSG",
            "aws_subnet.drprivSN",
            "aws_vpc.dr",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "drnat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8df195de146820c",
            "association_id": "eipassoc-09640455be1525049",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0284ced224d60e1e0",
            "network_interface_id": "eni-002a39136ce2026d8",
            "private_ip": "10.0.1.151",
            "public_ip": "52.220.103.92",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06f64e4c8645de92d",
            "tags": {
              "Name": "drnat"
            },
            "tags_all": {
              "Name": "drnat"
            },
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.drnat_eip",
            "aws_internet_gateway.drigw",
            "aws_subnet.drpubSN",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:route-table/rtb-06ad574bce14a526c",
            "id": "rtb-06ad574bce14a526c",
            "owner_id": "536548358674",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0284ced224d60e1e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "rtb-06ad574bce14a526c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.drnat_eip",
            "aws_internet_gateway.drigw",
            "aws_nat_gateway.drnat",
            "aws_subnet.drpubSN",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:route-table/rtb-00dc2f3115fa44b57",
            "id": "rtb-00dc2f3115fa44b57",
            "owner_id": "536548358674",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cdeb7064aaeb66c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "rtb-00dc2f3115fa44b57",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.drigw",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefd29b6ca624ab8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06ad574bce14a526c",
            "subnet_id": "subnet-0c81688ebc5bcf3fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.drnat_eip",
            "aws_internet_gateway.drigw",
            "aws_nat_gateway.drnat",
            "aws_route_table.private_rt",
            "aws_subnet.drprivSN",
            "aws_subnet.drpubSN",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09caeac6a84dc8ab2",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-00dc2f3115fa44b57",
            "subnet_id": "subnet-06f64e4c8645de92d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.drigw",
            "aws_route_table.public_rt",
            "aws_subnet.drpubSN",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3d8b2b16ac60275",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-00dc2f3115fa44b57",
            "subnet_id": "subnet-0c876ac425185de49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.drigw",
            "aws_route_table.public_rt",
            "aws_subnet.drpubSN2",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group/sg-090a88a8148b7aaa5",
            "description": "ALB SG: allow inbound 80/443 from Internet",
            "egress": [],
            "id": "sg-090a88a8148b7aaa5",
            "ingress": [],
            "name": "dr-alb-sg",
            "name_prefix": "",
            "owner_id": "536548358674",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-alb-sg"
            },
            "tags_all": {
              "Name": "dr-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sg-090a88a8148b7aaa5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "drSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group/sg-03ba6c684622a4bcc",
            "description": "EC2 SG: allow from ALB only",
            "egress": [],
            "id": "sg-03ba6c684622a4bcc",
            "ingress": [],
            "name": "drSG",
            "name_prefix": "",
            "owner_id": "536548358674",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "drSG"
            },
            "tags_all": {
              "Name": "drSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sg-03ba6c684622a4bcc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "drprivSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:subnet/subnet-0c81688ebc5bcf3fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c81688ebc5bcf3fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536548358674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "drprivSN"
            },
            "tags_all": {
              "Name": "drprivSN"
            },
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "subnet-0c81688ebc5bcf3fa",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "drpubSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:subnet/subnet-06f64e4c8645de92d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f64e4c8645de92d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536548358674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "drpubSN"
            },
            "tags_all": {
              "Name": "drpubSN"
            },
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "subnet-06f64e4c8645de92d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "drpubSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:subnet/subnet-0c876ac425185de49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c876ac425185de49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536548358674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "drpubSN2"
            },
            "tags_all": {
              "Name": "drpubSN2"
            },
            "vpc_id": "vpc-0c4954fe6abb65701"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "subnet-0c876ac425185de49",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:vpc/vpc-0c4954fe6abb65701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c779ed37b79a7273",
            "default_route_table_id": "rtb-0fc511e828bf0b8fb",
            "default_security_group_id": "sg-0626fe0f18cbd019d",
            "dhcp_options_id": "dopt-0aa5906e7cada687f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4954fe6abb65701",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc511e828bf0b8fb",
            "owner_id": "536548358674",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dr"
            },
            "tags_all": {
              "Name": "dr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "vpc-0c4954fe6abb65701",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-0c2703c90ef945074",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c2703c90ef945074",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-090a88a8148b7aaa5",
            "security_group_rule_id": "sgr-0c2703c90ef945074",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-0c2703c90ef945074",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-046c7afdab2bfe33b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-046c7afdab2bfe33b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-03ba6c684622a4bcc",
            "security_group_rule_id": "sgr-046c7afdab2bfe33b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-046c7afdab2bfe33b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.drSG",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-0a834b90615f8046b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from Internet",
            "from_port": 80,
            "id": "sgr-0a834b90615f8046b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-090a88a8148b7aaa5",
            "security_group_rule_id": "sgr-0a834b90615f8046b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-0a834b90615f8046b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-013b97b96ab939761",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS from Internet",
            "from_port": 443,
            "id": "sgr-013b97b96ab939761",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-090a88a8148b7aaa5",
            "security_group_rule_id": "sgr-013b97b96ab939761",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-013b97b96ab939761",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dr_ec2_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-0ea7d5f5f94bda6b7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP(NodePort 30130) from ALB only",
            "from_port": 30130,
            "id": "sgr-0ea7d5f5f94bda6b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-090a88a8148b7aaa5",
            "region": "ap-southeast-1",
            "security_group_id": "sg-03ba6c684622a4bcc",
            "security_group_rule_id": "sgr-0ea7d5f5f94bda6b7",
            "tags": null,
            "tags_all": {},
            "to_port": 30130
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-0ea7d5f5f94bda6b7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.drSG",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dr_ec2_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-07b9bfb2fbef1dca9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "ICMP (ping) ",
            "from_port": -1,
            "id": "sgr-07b9bfb2fbef1dca9",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-03ba6c684622a4bcc",
            "security_group_rule_id": "sgr-07b9bfb2fbef1dca9",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-07b9bfb2fbef1dca9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.drSG",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dr_ec2_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536548358674:security-group-rule/sgr-07e587866b2522092",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH (recommend restrict to your IP or use SSM only)",
            "from_port": 22,
            "id": "sgr-07e587866b2522092",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-03ba6c684622a4bcc",
            "security_group_rule_id": "sgr-07e587866b2522092",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536548358674",
            "id": "sgr-07e587866b2522092",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.drSG",
            "aws_vpc.dr"
          ]
        }
      ]
    }
  ]
}